[metadata]
name = QNPy
version = 0.0.3
authors = Marina Pavlovic and Aman Raju
author_email = marinapavlovic5812@gmail.com
description = Modeling Quasar time series with Neural processes in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LSST-SER-SAG-S1/QNPy

For more detailed documentation, please visit [here](https://lsst-ser-sag-s1.github.io/QNPy/).

classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]

python_requires = >=3.7
include_package_data = True 
